--- a/webkitjelbrek/jailbreakme/xd.html
+++ b/webkitjelbrek/jailbreakme/xd.html
@@ -9,68 +9,64 @@
     <link rel="apple-touch-icon" href="https://theapplewiki.com/images/applewiki/archive/d/d2/20110715013252%21Cydia_icon.png">
     <title>JailbreakMe 2.0</title>
     <style>
-        body, html { margin: 0; padding: 0; height: 100%; background: #000; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; overflow: hidden; user-select: none; }
-        #viewport { height: 100%; background: url('https://wallpaperaccess.com/full/379051.jpg') no-repeat center center; background-size: cover; position: relative; display: flex; flex-direction: column; align-items: center; }
+        body, html { margin: 0; padding: 0; height: 100%; background: #000; font-family: "Helvetica Neue", Helvetica, sans-serif; overflow: hidden; user-select: none; }
         
-        /* Updated Header based on image */
-        header { padding: 40px 0 20px; text-align: center; color: white; text-shadow: 0 1px 4px rgba(0,0,0,0.8); }
-        header h1 { font-size: 46px; margin: 0; font-weight: 500; letter-spacing: -1px; }
-        header p { margin: 5px 0 0 0; opacity: 0.9; font-size: 16px; font-weight: 300; }
+        #viewport { height: 100%; background: url('https://wallpaperaccess.com/full/379051.jpg') no-repeat center center; background-size: cover; position: relative; display: flex; flex-direction: column; align-items: center; }
 
-        /* Information Panel from image */
+        header { padding: 60px 0 30px; text-align: center; color: white; text-shadow: 0 1px 8px rgba(0,0,0,0.9); }
+        header h1 { font-size: 48px; margin: 0; font-weight: 500; letter-spacing: -1px; }
+
+        /* Larger Glass Panel */
         .glass-panel {
-            background: rgba(45, 45, 45, 0.7);
-            border: 2px solid rgba(255,255,255,0.4);
+            background: rgba(35, 35, 35, 0.8);
+            border: 1px solid rgba(255,255,255,0.3);
             border-radius: 15px;
-            width: 82%; max-width: 290px;
-            padding: 20px;
+            width: 88%; max-width: 340px;
+            padding: 30px 20px;
             text-align: center; color: white;
-            box-shadow: 0 15px 35px rgba(0,0,0,0.7);
-            position: relative; overflow: hidden;
-            backdrop-filter: blur(8px); -webkit-backdrop-filter: blur(8px);
-        }
-        .glass-panel::before {
-            content: ''; position: absolute; top: 0; left: 0; width: 100%; height: 45%;
-            background: linear-gradient(rgba(255,255,255,0.2), transparent); pointer-events: none;
+            box-shadow: 0 25px 50px rgba(0,0,0,0.7);
+            backdrop-filter: blur(10px); -webkit-backdrop-filter: blur(10px);
         }
 
-        /* Exploit Window Overlay */
-        #exploit-overlay {
-            display: none; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
-            width: 270px; background: rgba(10,10,10,0.95); border: 1px solid #666; border-radius: 14px;
-            padding: 25px 15px; text-align: center; color: white; z-index: 1000;
-        }
-        #exploit-title { font-weight: bold; font-size: 19px; margin-bottom: 5px; }
-        .progress-track { width: 100%; height: 18px; background: #000; border-radius: 9px; margin: 22px 0 12px; border: 1px solid #333; overflow: hidden; }
-        .progress-fill { width: 0%; height: 100%; background: linear-gradient(to bottom, #b4ddb4, #008a00); transition: width 0.3s; }
-        #status-msg { font-size: 13px; color: #ccc; min-height: 3.5em; line-height: 1.5; }
-
-        /* Slider with updated graphics */
-        .bottom { position: absolute; bottom: 70px; width: 100%; display: flex; justify-content: center; }
+        /* Widened Slider */
+        .bottom { position: absolute; bottom: 90px; width: 100%; display: flex; justify-content: center; }
         .track { 
-            width: 290px; height: 58px; background: rgba(0,0,0,0.7); 
-            border: 1px solid rgba(255,255,255,0.15); border-radius: 12px; 
+            width: 320px; height: 60px; background: rgba(0,0,0,0.55); 
+            border: 1px solid rgba(255,255,255,0.25); border-radius: 15px; 
             position: relative; display: flex; align-items: center;
         }
         .slider-text { 
             width: 100%; text-align: center; color: #fff; font-size: 22px; font-weight: 300;
-            background: linear-gradient(90deg, #666, #fff, #666); background-size: 200%;
+            background: linear-gradient(90deg, #555, #fff, #555); background-size: 200%;
             -webkit-background-clip: text; -webkit-text-fill-color: transparent; animation: shine 3s infinite;
         }
         .handle { 
-            width: 78px; height: 52px; background: linear-gradient(#fff 0%, #eee 50%, #999 100%); 
-            border-radius: 10px; position: absolute; left: 3px; cursor: pointer;
-            box-shadow: 0 1px 3px #000; display: flex; align-items: center; justify-content: center;
+            width: 85px; height: 54px; background: linear-gradient(#fdfdfd, #9a9a9a); 
+            border-radius: 12px; position: absolute; left: 3px; cursor: pointer;
+            box-shadow: 0 2px 5px #000; display: flex; align-items: center; justify-content: center;
         }
-        /* The Arrow in the handle */
-        .handle::after { content: ''; border-top: 10px solid transparent; border-bottom: 10px solid transparent; border-left: 14px solid #444; margin-left: 5px; }
+        .handle::after { content: ''; border-top: 10px solid transparent; border-bottom: 10px solid transparent; border-left: 14px solid #333; margin-left: 5px; }
 
-        /* Generic layers */
-        #cydia-loading, #respring-layer, #reboot-layer, #recovery-layer { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: #000; z-index: 2000; justify-content: center; align-items: center; flex-direction: column; }
-        .spinner { position: relative; width: 38px; height: 38px; margin-top: 25px; }
-        .spinner div { position: absolute; width: 10%; height: 28%; background: #fff; left: 45%; top: 36%; opacity: 0; border-radius: 50px; animation: fade 1s linear infinite; }
+        /* Exploit Overlay */
+        #exploit-overlay {
+            display: none; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
+            width: 280px; background: rgba(0,0,0,0.94); border: 1px solid #666; border-radius: 14px;
+            padding: 30px 20px; text-align: center; color: white; z-index: 1000;
+        }
+        .progress-track { width: 100%; height: 20px; background: #111; border-radius: 10px; margin: 25px 0 15px; border: 1px solid #444; overflow: hidden; }
+        .progress-fill { width: 0%; height: 100%; background: linear-gradient(to bottom, #b4ddb4, #008a00); transition: width 0.3s; }
+
+        /* PWA Cydia Interface (Higher position) */
+        #cydia-pwa { 
+            display: none; height: 100%; background: #000; color: #fff; 
+            flex-direction: column; justify-content: flex-start; align-items: center; padding-top: 25%;
+        }
+
+        /* Spinner */
+        .spinner { position: relative; width: 42px; height: 42px; margin-top: 30px; }
+        .spinner div { position: absolute; width: 10%; height: 30%; background: #fff; left: 45%; top: 35%; opacity: 0; border-radius: 50px; animation: fade 1s linear infinite; }
         @keyframes fade { from { opacity: 1; } to { opacity: 0.15; } }
-        /* Spinner Blades */
+        /* 12 Blades */
         .spinner div:nth-child(1) { transform: rotate(0deg) translate(0, -140%); animation-delay: 0s; }
         .spinner div:nth-child(2) { transform: rotate(30deg) translate(0, -140%); animation-delay: -0.91s; }
         .spinner div:nth-child(3) { transform: rotate(60deg) translate(0, -140%); animation-delay: -0.83s; }
@@ -84,91 +80,85 @@
         .spinner div:nth-child(11) { transform: rotate(300deg) translate(0, -140%); animation-delay: -0.16s; }
         .spinner div:nth-child(12) { transform: rotate(330deg) translate(0, -140%); animation-delay: -0.08s; }
 
+        /* Transition Layers */
+        #respring-layer, #reboot-layer, #black-screen, #recovery-layer { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: #000; z-index: 2000; justify-content: center; align-items: center; flex-direction: column; }
+        .silver-apple { width: 100px; height: 120px; background: linear-gradient(135deg, #eee, #888, #eee); -webkit-mask: url('https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg') no-repeat center; -webkit-mask-size: contain; }
+
+        /* Final RIP Fade-in */
+        #rip-text { opacity: 0; color: #444; font-family: "Times New Roman", serif; text-align: center; margin-top: 40px; transition: opacity 3s ease-in; }
+        
         @keyframes shine { 0% { background-position: 150%; } 100% { background-position: -150%; } }
     </style>
 </head>
 <body>
 
 <div id="viewport">
-    <header>
-        <h1>JailbreakMe</h1>
-        <p>by comex (et al.)</p>
-    </header>
-
+    <header><h1>JailbreakMe</h1><p>by comex</p></header>
     <div class="glass-panel">
-        <b style="font-size:16px; display:block; margin-bottom:10px;">JailbreakMe</b>
-        <p style="font-size:14px; line-height:1.3; margin:0;">
-            Jailbreak to get tweaks and apps Apple won't allow in the App Store.<br>
-            Free, legal, safe.
-        </p>
-        <p style="font-size:14px; line-height:1.3; margin:12px 0;">
-            You should sync with iTunes before using this tool.
-        </p>
-        <a href="#" style="color:#fff; text-decoration:none; font-size:17px; font-weight:bold;">More Info »</a>
+        <b style="font-size:20px; display:block; margin-bottom:12px;">JailbreakMe</b>
+        <p style="font-size:15px; line-height:1.5; margin-bottom:20px;">Jailbreak to get tweaks and apps Apple won't allow in the App Store.</p>
+        <a href="#" style="color:#6ab2ff; text-decoration:none; font-weight:bold;">More Info »</a>
     </div>
 
     <div id="exploit-overlay">
-        <div id="exploit-title">Jailbreaking...</div>
+        <div id="exploit-title" style="font-weight:bold; font-size:19px;">Jailbreaking...</div>
         <div class="progress-track"><div class="progress-fill" id="fill"></div></div>
-        <div id="status-msg">Initializing exploit...</div>
+        <div id="status-msg" style="color:#aaa; font-size:14px;">Initializing exploit...</div>
     </div>
 
-    <div class="bottom">
-        <div class="track" id="track">
-            <div class="slider-text" id="stext">slide to jailbreak</div>
-            <div id="handle" class="handle"></div>
-        </div>
-    </div>
+    <div class="bottom"><div class="track"><div class="slider-text" id="stext">slide to jailbreak</div><div id="handle" class="handle"></div></div></div>
 </div>
 
-<div id="cydia-loading">
-    <div style="font-size: 19px; letter-spacing: 0.5px; font-weight: 300;">Downloading Cydia Data</div>
-    <div class="spinner">
-        <div></div><div></div><div></div><div></div><div></div><div></div>
-        <div></div><div></div><div></div><div></div><div></div><div></div>
-    </div>
+<div id="cydia-pwa">
+    <div style="font-size: 20px; letter-spacing: 0.5px; color:#efefef;">Downloading Cydia Data</div>
+    <div style="font-size: 14px; color:#666; margin-top:8px;">Loading resources...</div>
+    <div class="spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
 </div>
 
 <div id="respring-layer"><div class="spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div></div>
-<div id="reboot-layer"><div style="width:90px; height:110px; background:linear-gradient(135deg, #eee, #888, #eee); -webkit-mask: url('https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg') no-repeat center; -webkit-mask-size: contain;"></div></div>
+<div id="reboot-layer"><div class="silver-apple"></div></div>
+<div id="black-screen"></div>
 <div id="recovery-layer">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/d/df/ITunes_logo.svg" style="width:130px; filter:saturate(0.2) brightness(0.65);">
-    <div style="width:2px; height:110px; background:linear-gradient(#fff, transparent); margin: 30px auto;"></div>
-    <div style="color:#444; font-family:'Times New Roman', serif; text-align:center;">
-        <div style="font-size:26px; font-weight:bold; letter-spacing:1px;">RIP <span id="dev-type">XD</span></div>
-        <div style="font-size:17px; margin-top:5px;">2025 - 2025</div>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/d/df/ITunes_logo.svg" style="width:140px; filter:saturate(0.2) brightness(0.65);">
+    <div style="width:2px; height:120px; background:linear-gradient(#fff, transparent); margin: 35px auto;"></div>
+    <div id="rip-text">
+        <div style="font-size:28px; font-weight:bold; letter-spacing:1px;">RIP <span id="dev-type">XD</span></div>
+        <div style="font-size:18px; margin-top:5px;">2025 - 2025</div>
     </div>
 </div>
 
 <script>
     const isPWA = window.navigator.standalone || window.matchMedia('(display-mode: standalone)').matches;
     const ua = navigator.userAgent;
-    const devType = ua.includes("iPad") ? "iPad" : (ua.includes("iPhone") ? "iPhone" : (ua.includes("iPod") ? "iPod" : "XD"));
-    document.getElementById('dev-type').innerText = devType;
+    const dev = ua.includes("iPad") ? "iPad" : (ua.includes("iPhone") ? "iPhone" : (ua.includes("iPod") ? "iPod" : "XD"));
+    document.getElementById('dev-type').innerText = dev;
 
     if (isPWA) {
         document.getElementById('viewport').style.display = 'none';
-        document.getElementById('cydia-loading').style.display = 'flex';
-        setTimeout(startFinalDisaster, 7000);
+        document.getElementById('cydia-pwa').style.display = 'flex';
+        setTimeout(triggerDisaster, 8000);
     }
 
-    const handle = document.getElementById('handle'), track = document.getElementById('track');
-    let isDragging = false, startX = 0, max = track.offsetWidth - handle.offsetWidth - 6;
-
-    const start = (e) => { isDragging = true; startX = e.type.includes('touch') ? e.touches[0].clientX : e.clientX; handle.style.transition = 'none'; };
-    const move = (e) => {
-        if (!isDragging) return;
-        let x = (e.type.includes('touch') ? e.touches[0].clientX : e.clientX) - startX;
-        x = Math.max(0, Math.min(x, max));
-        handle.style.transform = `translateX(${x}px)`;
-        document.getElementById('stext').style.opacity = 1 - (x/max);
-    };
-    const end = () => {
-        if (!isDragging) return; isDragging = false;
-        const x = parseInt(new WebKitCSSMatrix(window.getComputedStyle(handle).transform).m41);
-        if (x > max * 0.95) { handle.style.transform = `translateX(${max}px)`; startExploit(); }
-        else { handle.style.transition = '0.3s'; handle.style.transform = 'translateX(0)'; document.getElementById('stext').style.opacity = 1; }
-    };
+    const handle = document.getElementById('handle'), track = handle?.parentElement;
+    if (handle) {
+        let isDragging = false, startX = 0, max = track.offsetWidth - handle.offsetWidth - 6;
+        const start = (e) => { isDragging = true; startX = e.type.includes('touch') ? e.touches[0].clientX : e.clientX; handle.style.transition = 'none'; };
+        const move = (e) => {
+            if (!isDragging) return;
+            let x = (e.type.includes('touch') ? e.touches[0].clientX : e.clientX) - startX;
+            x = Math.max(0, Math.min(x, max));
+            handle.style.transform = `translateX(${x}px)`;
+            document.getElementById('stext').style.opacity = 1 - (x/max);
+        };
+        const end = () => {
+            if (!isDragging) return; isDragging = false;
+            const x = parseInt(new WebKitCSSMatrix(window.getComputedStyle(handle).transform).m41);
+            if (x > max * 0.95) { handle.style.transform = `translateX(${max}px)`; startExploit(); }
+            else { handle.style.transition = '0.3s'; handle.style.transform = 'translateX(0)'; document.getElementById('stext').style.opacity = 1; }
+        };
+        handle.addEventListener('mousedown', start); window.addEventListener('mousemove', move); window.addEventListener('mouseup', end);
+        handle.addEventListener('touchstart', start); window.addEventListener('touchmove', move); window.addEventListener('touchend', end);
+    }
 
     function startExploit() {
         document.getElementById('exploit-overlay').style.display = 'block';
@@ -177,8 +167,7 @@
             p += 2;
             document.getElementById('fill').style.width = p + '%';
             if (p === 30) document.getElementById('status-msg').innerText = "Bypassing sandbox...";
-            if (p === 60) document.getElementById('status-msg').innerText = "Downloading Cydia core...";
-            if (p === 90) document.getElementById('status-msg').innerText = "Patching kernel...";
+            if (p === 70) document.getElementById('status-msg').innerText = "Patching kernel...";
             if (p >= 100) {
                 clearInterval(iv);
                 setTimeout(() => {
@@ -188,25 +177,27 @@
                     document.getElementById('status-msg').style.color = "#fff";
                 }, 800);
             }
-        }, 120);
+        }, 150);
     }
 
-    function startFinalDisaster() {
-        document.getElementById('cydia-loading').style.display = 'none';
+    function triggerDisaster() {
+        document.getElementById('cydia-pwa').style.display = 'none';
         document.getElementById('respring-layer').style.display = 'flex';
         setTimeout(() => {
             document.getElementById('respring-layer').style.display = 'none';
             document.getElementById('reboot-layer').style.display = 'flex';
             setTimeout(() => {
                 document.getElementById('reboot-layer').style.display = 'none';
-                document.getElementById('recovery-layer').style.display = 'flex';
-            }, 5000);
-        }, 4500);
+                document.getElementById('black-screen').style.display = 'flex';
+                setTimeout(() => {
+                    document.getElementById('black-screen').style.display = 'none';
+                    document.getElementById('recovery-layer').style.display = 'flex';
+                    // RIP slowly fades in after 3 seconds
+                    setTimeout(() => { document.getElementById('rip-text').style.opacity = '1'; }, 3000);
+                }, 4000); // 4s black screen before recovery
+            }, 6000); // 6s Apple logo
+        }, 5000); // 5s Respring
     }
-
-    handle.addEventListener('mousedown', start); window.addEventListener('mousemove', move); window.addEventListener('mouseup', end);
-    handle.addEventListener('touchstart', start); window.addEventListener('touchmove', move); window.addEventListener('touchend', end);
 </script>
-
 </body>
 </html>
