--- a/aios/install.html
+++ b/aios/install.html
@@ -37,7 +37,7 @@
 
     <div class="container" id="install-ui" style="display:none;">
         <img src="image.png" class="app-icon">
-        <div class="title">AIOS Switcher</div>
+        <div class="title">AIOS Installer</div>
         <div class="subtitle">Add AIOS to your Home Screen to begin installation</div>
         
         <div class="guide-box">
