--- a/about.html
+++ b/about.html
@@ -11,7 +11,9 @@
     
     <div class="container">
         <header class="profile-header">
-            <img src="YOUR_AVATAR_URL_HERE" alt="TNH Avatar" class="avatar">
+            <div class="icon-container">
+                <img src="image/icon.jpeg" alt="TNH Icon" class="avatar">
+                <div class="gloss"></div> </div>
             <div class="greeting-text">
                 <h1>Hello</h1>
                 <h2>我係TNH</h2>
@@ -31,13 +33,16 @@
 
         <section class="works-section">
             <h3>作品</h3>
-            <div class="cover-flow-container" id="coverFlow">
-                <div class="cover-item">作品 1</div>
-                <div class="cover-item active">Cover Flow</div>
-                <div class="cover-item">作品 3</div>
-                <div class="cover-item">作品 4</div>
-                <div class="cover-item">作品 5</div>
+            <div class="cover-flow-wrap">
+                <div class="cover-flow-container" id="coverFlow">
+                    <div class="cover-item">作品 1</div>
+                    <div class="cover-item">作品 2</div>
+                    <div class="cover-item active">Cover Flow</div>
+                    <div class="cover-item">作品 4</div>
+                    <div class="cover-item">作品 5</div>
+                </div>
             </div>
+            <div class="glass-bottom"></div>
         </section>
     </div>
 
