--- a/about.html
+++ b/about.html
@@ -2,18 +2,18 @@
 <html lang="zh-Hant">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Hello 我係TNH</title>
     <link rel="stylesheet" href="about.css">
 </head>
 <body>
     <div class="background-overlay"></div>
-    
     <div class="container">
         <header class="profile-header">
             <div class="icon-container">
                 <img src="image/icon.jpeg" alt="TNH Icon" class="avatar">
-                <div class="gloss"></div> </div>
+                <div class="gloss"></div>
+            </div>
             <div class="greeting-text">
                 <h1>Hello</h1>
                 <h2>我係TNH</h2>
@@ -45,7 +45,6 @@
             <div class="glass-bottom"></div>
         </section>
     </div>
-
     <script src="about.js"></script>
 </body>
 </html>
