--- a/about.html
+++ b/about.html
@@ -37,12 +37,23 @@
                 <div class="cover-flow-container" id="coverFlow">
                     <div class="cover-item">作品 1</div>
                     <div class="cover-item">作品 2</div>
-                    <div class="cover-item active">Cover Flow</div>
+                    <div class="cover-item">作品 3</div>
                     <div class="cover-item">作品 4</div>
                     <div class="cover-item">作品 5</div>
                 </div>
             </div>
             <div class="glass-bottom"></div>
+        </section>
+
+        <section class="social-section">
+            <h3>關注我</h3>
+            <div class="social-grid">
+                <a href="#"><img src="image/ig.png" alt="Instagram"></a>
+                <a href="#"><img src="image/th.png" alt="Threads"></a>
+                <a href="#"><img src="image/yt.png" alt="YouTube"></a>
+                <a href="#"><img src="image/rd.png" alt="Reddit"></a>
+                <a href="#"><img src="image/tw.png" alt="Twitter"></a>
+            </div>
         </section>
     </div>
     <script src="about.js"></script>
