--- a/about.html
+++ b/about.html
@@ -46,15 +46,15 @@
         </section>
 
         <section class="social-section">
-            <h3>關注我</h3>
-            <div class="social-grid">
-                <a href="#"><img src="image/ig.png" alt="Instagram"></a>
-                <a href="#"><img src="image/th.png" alt="Threads"></a>
-                <a href="#"><img src="image/yt.png" alt="YouTube"></a>
-                <a href="#"><img src="image/rd.png" alt="Reddit"></a>
-                <a href="#"><img src="image/tw.png" alt="Twitter"></a>
-            </div>
-        </section>
+    <h3>關注我</h3>
+    <div class="social-row">
+        <a href="#"><img src="image/ig.png" alt="Instagram"></a>
+        <a href="#"><img src="image/th.png" alt="Threads"></a>
+        <a href="#"><img src="image/yt.png" alt="YouTube"></a>
+        <a href="#"><img src="image/rd.png" alt="Reddit"></a>
+        <a href="#"><img src="image/tw.png" alt="Twitter"></a>
+    </div>
+</section>
     </div>
     <script src="about.js"></script>
 </body>
