--- a/about.html
+++ b/about.html
@@ -3,107 +3,91 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>TNH Personal Home</title>
+    <title>Hello 我係TNH</title>
     <link rel="stylesheet" href="about.css">
 </head>
 <body>
     <div class="background-overlay"></div>
     
-    <div class="container portrait-only">
-        <header class="profile-header">
-            <div class="icon-container">
-                <img src="image/icon.jpeg" alt="TNH Icon" class="avatar">
-                <div class="gloss"></div>
-            </div>
-            <div class="greeting-text">
-                <h1>Hello</h1>
-                <h2>我係TNH</h2>
-            </div>
-        </header>
-
-        <section class="info-section">
-            <h3>一個</h3>
-            <p>創作者、玩家、HongKonger、Minecrafter</p>
-            <p>測試者、設計者、開發者</p>
-        </section>
-
-        <section class="info-section">
-            <h3>興趣</h3>
-            <p>Minecraft、創作、懷舊設計、軟件修改</p>
-        </section>
-
-        <section class="works-section">
-            <h3>作品</h3>
-            <div class="cover-flow-wrap">
-                <div class="cover-flow-container" id="coverFlow">
-                    <div class="cover-item">作品 1</div>
-                    <div class="cover-item">作品 2</div>
-                    <div class="cover-item">作品 3</div>
-                    <div class="cover-item">作品 4</div>
-                    <div class="cover-item">作品 5</div>
+    <div class="container">
+        <div class="main-layout">
+            <header class="profile-header">
+                <div class="info-group">
+                    <section class="info-text-section">
+                        <h3>一個</h3>
+                        <p>創作者、玩家、HongKonger、Minecrafter</p>
+                        <p>測試者、設計者、開發者</p>
+                    </section>
+                    <section class="interest-section">
+                        <h3>興趣</h3>
+                        <p>Minecraft、創作、懷舊設計、軟件修改</p>
+                    </section>
                 </div>
-            </div>
-            <div class="glass-bottom"></div>
-        </section>
 
-        <section class="social-section">
-            <h3>關注我</h3>
-            <div class="social-row">
-                <a href="#"><img src="image/ig.png" alt="IG"></a>
-                <a href="#"><img src="image/th.png" alt="TH"></a>
-                <a href="#"><img src="image/yt.png" alt="YT"></a>
-                <a href="#"><img src="image/rd.png" alt="RD"></a>
-                <a href="#"><img src="image/tw.png" alt="TW"></a>
-            </div>
-        </section>
-    </div>
+                <div class="avatar-group">
+                    <div class="icon-container">
+                        <img src="image/icon.jpeg" alt="TNH Icon" class="avatar">
+                        <div class="gloss"></div>
+                    </div>
+                    <div class="greeting-text">
+                        <h1>Hello</h1>
+                        <h2>我係TNH</h2>
+                    </div>
+                </div>
+            </header>
 
-    <div class="landscape-only" id="frontRowMain">
-        <div class="front-row-left">
-            <button class="fr-btn" id="openWorksBtn">瀏覽作品</button>
-            <div class="fr-social">
-                <p>關注我</p>
+            <section class="works-section portrait-only">
+                <h3>作品</h3>
+                <div class="cover-flow-wrap">
+                    <div class="cover-flow-container" id="coverFlow">
+                        <div class="cover-item">作品 1</div>
+                        <div class="cover-item">作品 2</div>
+                        <div class="cover-item">作品 3</div>
+                        <div class="cover-item">作品 4</div>
+                        <div class="cover-item">作品 5</div>
+                    </div>
+                </div>
+                <div class="glass-bottom"></div>
+            </section>
+
+            <div class="landscape-controls landscape-only">
+                <button id="btn-browse-works" class="ios-btn black-btn">瀏覽作品</button>
+            </div>
+
+            <section class="social-section">
+                <h3 class="portrait-only">關注我</h3> <div class="social-text-landscape landscape-only">關注我</div>
                 <div class="social-row">
-                    <a href="#"><img src="image/ig.png" alt="IG"></a>
-                    <a href="#"><img src="image/th.png" alt="TH"></a>
-                    <a href="#"><img src="image/yt.png" alt="YT"></a>
-                    <a href="#"><img src="image/rd.png" alt="RD"></a>
-                    <a href="#"><img src="image/tw.png" alt="TW"></a>
+                    <a href="#"><img src="image/ig.png" alt="Instagram"></a>
+                    <a href="#"><img src="image/th.png" alt="Threads"></a>
+                    <a href="#"><img src="image/yt.png" alt="YouTube"></a>
+                    <a href="#"><img src="image/rd.png" alt="Reddit"></a>
+                    <a href="#"><img src="image/tw.png" alt="Twitter"></a>
                 </div>
-            </div>
-        </div>
-        <div class="front-row-right">
-            <div class="fr-profile">
-                <img src="image/icon.jpeg" alt="TNH Icon" class="avatar fr-avatar">
-                <div class="fr-text">
-                    <h1>Hello</h1>
-                    <h2>我係TNH</h2>
-                </div>
-            </div>
-            <div class="fr-info">
-                <p>一個：創作者、HongKonger、Minecrafter...</p>
-                <p>興趣：Minecraft、創作、懷舊設計...</p>
-            </div>
+            </section>
         </div>
     </div>
 
-    <div class="landscape-works-view hidden" id="frontRowWorks">
-        <div class="works-preview-area">
-            <div class="fr-work-box active" id="fr-preview">作品1</div>
-        </div>
-        <div class="works-list-area">
-            <h3>我的作品</h3>
-            <div class="fr-list-container">
-                <div class="fr-list-item active" data-id="1">作品1</div>
-                <div class="fr-list-item" data-id="2">作品2</div>
-                <div class="fr-list-item" data-id="3">作品3</div>
-                <div class="fr-list-item" data-id="4">作品4</div>
-                <div class="fr-list-item" data-id="5">作品5</div>
+    <div id="front-row-overlay" class="front-row-overlay">
+        <div class="fr-content">
+            <div class="fr-preview-stage">
+                <div id="fr-current-preview" class="fr-card">作品 1</div>
+            </div>
+
+            <div class="fr-menu-panel">
+                <h3>我的作品</h3>
+                <ul class="fr-list" id="fr-list">
+                    <li data-index="0" class="active">作品 1</li>
+                    <li data-index="1">作品 2</li>
+                    <li data-index="2">作品 3</li>
+                    <li data-index="3">作品 4</li>
+                    <li data-index="4">作品 5</li>
+                </ul>
             </div>
         </div>
-        <div class="fr-footer-btns">
-            <button class="fr-btn fr-close" id="closeWorksBtn">關閉</button>
-            <button class="fr-btn fr-go">前往</button>
+
+        <div class="fr-controls">
+            <button id="btn-close" class="ios-btn black-btn">關閉</button>
+            <button id="btn-go" class="ios-btn blue-btn">前往</button>
         </div>
     </div>
 
