--- a/about.html
+++ b/about.html
@@ -3,57 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>TNH Personal Home</title>
+    <title>Hello 我係TNH</title>
     <link rel="stylesheet" href="about.css">
 </head>
 <body>
     <div class="background-overlay"></div>
     
-    <div class="container" id="mainContainer">
-        <div class="left-zone">
-            <section class="info-section">
-                <h3>一個</h3>
-                <p>創作者、玩家、HongKonger、Minecrafter</p>
-                <p>測試者、設計者、開發者</p>
-            </section>
-
-            <section class="info-section">
-                <h3>興趣</h3>
-                <p>Minecraft、創作、懷舊設計、軟件修改</p>
-            </section>
-
-            <div class="landscape-only btn-area">
-                <button class="ios-btn black" id="openWorksBtn">瀏覽作品</button>
+    <div class="container">
+        <header class="profile-header">
+            <div class="icon-container">
+                <img src="image/icon.jpeg" alt="TNH Icon" class="avatar">
+                <div class="gloss"></div>
             </div>
-        </div>
+            <div class="greeting-text">
+                <h1>Hello</h1>
+                <h2>我係TNH</h2>
+            </div>
+        </header>
 
-        <div class="right-zone">
-            <header class="profile-header">
-                <div class="icon-container">
-                    <img src="image/icon.jpeg" alt="TNH Icon" class="avatar">
-                    <div class="gloss"></div>
-                </div>
-                <div class="greeting-text">
-                    <h1>Hello</h1>
-                    <h2>我係TNH</h2>
-                </div>
-            </header>
+        <div class="desktop-layout-row">
+            <div class="info-group">
+                <section class="info-section">
+                    <h3>一個</h3>
+                    <p>創作者、HongKonger、Minecrafter</p>
+                    <p>測試者、設計者、開發者</p>
+                </section>
+                <section class="info-section">
+                    <h3>興趣</h3>
+                    <p>Minecraft、創作、懷舊設計、軟件修改</p>
+                </section>
+                <button id="browseBtn" class="classic-btn landscape-only">瀏覽作品</button>
+            </div>
 
-            <section class="social-section">
-                <h3 class="social-title">關注我</h3>
-                <div class="social-row">
-                    <a href="#"><img src="image/ig.png" alt="IG"></a>
-                    <a href="#"><img src="image/th.png" alt="TH"></a>
-                    <a href="#"><img src="image/yt.png" alt="YT"></a>
-                    <a href="#"><img src="image/rd.png" alt="RD"></a>
-                    <a href="#"><img src="image/tw.png" alt="TW"></a>
-                </div>
-            </section>
-        </div>
-
-        <section class="works-section" id="worksSection">
-            <h3 class="portrait-only">作品</h3>
-            <div class="works-layout-wrapper">
+            <section class="works-section portrait-only">
+                <h3>作品</h3>
                 <div class="cover-flow-wrap">
                     <div class="cover-flow-container" id="coverFlow">
                         <div class="cover-item">作品 1</div>
@@ -63,26 +46,41 @@
                         <div class="cover-item">作品 5</div>
                     </div>
                 </div>
+            </section>
 
-                <div class="landscape-only works-menu">
-                    <h3>我的作品</h3>
-                    <ul id="workList">
-                        <li class="active">作品 1</li>
-                        <li>作品 2</li>
-                        <li>作品 3</li>
-                        <li>作品 4</li>
-                        <li>作品 5</li>
-                    </ul>
+            <section class="social-section">
+                <h3>關注我</h3>
+                <div class="social-row">
+                    <a href="#"><img src="image/ig.png" alt="IG"></a>
+                    <a href="#"><img src="image/th.png" alt="TH"></a>
+                    <a href="#"><img src="image/yt.png" alt="YT"></a>
+                    <a href="#"><img src="image/rd.png" alt="RD"></a>
+                    <a href="#"><img src="image/tw.png" alt="TW"></a>
+                </div>
+            </section>
+        </div>
+    </div>
+
+    <div id="frontRowModal" class="front-row-overlay">
+        <div class="front-row-content">
+            <div class="fr-preview">
+                <div class="fr-cover-box" id="frPreviewBox">作品 1</div>
+            </div>
+            <div class="fr-menu">
+                <h2>我的作品</h2>
+                <ul id="frMenuList">
+                    <li class="active" data-index="0">作品 1</li>
+                    <li data-index="1">作品 2</li>
+                    <li data-index="2">作品 3</li>
+                    <li data-index="3">作品 4</li>
+                    <li data-index="4">作品 5</li>
+                </ul>
+                <div class="fr-controls">
+                    <button id="closeFrBtn" class="classic-btn btn-dark">關閉</button>
+                    <button class="classic-btn btn-blue">前往</button>
                 </div>
             </div>
-
-            <div class="landscape-only works-controls">
-                <button class="ios-btn black" id="closeWorksBtn">關閉</button>
-                <button class="ios-btn blue">前往</button>
-            </div>
-            
-            <div class="glass-bottom portrait-only"></div>
-        </section>
+        </div>
     </div>
 
     <script src="about.js"></script>
